# python-project-49

./: .gitignore  Makefile  README.md  logic_of_games.py  pyproject.toml
brain_games/: congrat.py  engine.py  games_calc.py  games_even.py  greeting.py  logic_of_games.py  rules_of_even.py  wrong_answer.py
brain_games/games/: Test_progression.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  games_even.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
